# Assignment_2

./: .gitignore  README.md
ws_24_assignments/: plot_traj2d.py
ws_24_assignments/src/group_24_assignment_2/: CMakeLists.txt  package.xml
ws_24_assignments/src/group_24_assignment_2/include/: utils.h
ws_24_assignments/src/group_24_assignment_2/launch/: global_launcher.launch.py  gripper.launch.py  launch_AprilTag_node.yml  planner_action_server.launch.py
ws_24_assignments/src/group_24_assignment_2/src/: backup_coord.cpp  coordinator_action_client.cpp  gripper.cpp  planner_action_server.cpp  utils.cpp
ws_24_assignments/src/hello_moveit/: CMakeLists.txt  package.xml
ws_24_assignments/src/hello_moveit/cfg/: tags_36h11.yaml
ws_24_assignments/src/hello_moveit/launch/: hello_moveit.launch.py
ws_24_assignments/src/hello_moveit/src/: hello_moveit.cpp
ws_24_assignments/src/interfaces/: CMakeLists.txt  package.xml
ws_24_assignments/src/interfaces/action/: Plan.action
ws_24_assignments/uml/: activityIr2.txt  classDiagIr.txt
